# Sentinel

./: .gitignore  README.md  package-lock.json  run-this.md
.claude/: settings.local.json
backend/: .env.example  agent.py  automations.py  browser_use_common.py  campaign.py  convex_client.py  imessage.py  linkedin_scroll.py  main.py  monitor_agent.py  monitor_store.py  overshoot.py  pipeline.py  prompt.md  pyproject.toml  reacher.py  reddit_scroll.py  save_auth.py  scraper.py  scraper_stream.py  scripts.py  social_login.py  social_pulse.py  supervised_agent.py  test_dm_schema.py  test_e2e.py  test_intent_routing.py  test_scripts_notion.py  test_supervised_diagnostic.py  tiktok_scroll.py  tools.py  twitter_scroll.py
backend/docs/: agentic-pipeline.md  how-to-run-nozomio.md  how-to-run-reacher.md  how-to-run-tensorlake-photon.md
backend/tensorlake_app/: README.md  launch_loop.py  test_pipeline.py
bridge/: README.md  index.ts  package.json  tsconfig.json
data/: brand-guide.md  company-overview.md  employees.csv  engineering-handbook.txt  incidents.csv  product-roadmap.md
data/campaigns/: 20260509-192524-hydrating-lip-gloss-with-shimmer-finish.md  20260509-193706-yirgacheffe-natural-coffee-beans-single-origin-ric.md  20260509-193739-holiday-gifting-bundle-with-three-single-origin-co.md  20260509-193909-yirgacheffe-natural-coffee-beans-single-origin-ric.md  20260509-193940-holiday-gifting-bundle-with-three-single-origin-co.md  20260509-200033-hydrating-lip-gloss-with-a-glossy-finish-and-natur.md  (+6 more)
frontend/: next.config.ts  package-lock.json  package.json
(+30 files in other folders)
