[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "av>=12.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "livekit>=0.17.0",
    "nia-ai-py>=1.3.0",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.3",
    "uvicorn[standard]>=0.46.0",
]
